# slagit

./: .bumpversion.cfg  .gitlab-ci.yml  .pre-commit-config.yaml  .sharelatex  README.md  README.rst  changelog.rst  default.nix  dump_sharelatex.py  locustfile.py  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
docs/: cli.rst  conf.py  index.rst
sharelatex/: __init__.py  __version__.py  admin.py  cli.py
sharelatex/tests/: CreateUserTest.coffee  docker-compose.yml  functionnal.py  test_cli.py  test_unit.py
sharelatex/tests/1.2.1/: CreateUserTest.coffee
