[metadata]
name = slagit
keywords = sharelatex, client, git, overleaf, sync, slagit 
license_file = LICENSE
url = https://github.com/JRodez/slagit
author = jrodez,  sed-rennes
author_email = jeremierodez+github@outlook.com sed-rba@inria.fr
long_description = file: README.rst
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
include_package_data = True
packages = find:
setup_requires =
    setuptools>=39.0.1
    wheel>=0.31.0
install_requires =
    socketIO-client==0.5.7.4
    websocket-client==0.59.0
    click~=8.0
    GitPython~=2.1.13
    filetype~=1.0.5
    keyring>=17.1.1,<23.9.0 # https://github.com/GoogleCloudPlatform/artifact-registry-python-tools/issues/33
    lxml>=4.3.3
    python-dateutil>= 2.7.3
    appdirs >= 1.4.3
    requests >= 2.27.0
    ezpylog >= 2.2.0

[options.packages.find]
exclude =
    docs

[options.entry_points]
console_scripts =
    slagit = sharelatex.cli:cli
    git-slagit = sharelatex.cli:cli
